--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -1,21 +1,34 @@
 <div class="col-sm-6 clear-mrg">
     <h2 class="title-thin text-muted">personal information</h2>
     <dl class="dl-horizontal clear-mrg">
-        <dt class="text-upper">Full Name</dt>
-        <dd>
-            <app-live-edit-input value={{fullName}} (onSave)="updateFullName($event)"></app-live-edit-input>
-        </dd>
-        <dt class="text-upper">Location</dt>
-        <dd>
-            <app-live-edit-input value={{location}} (onSave)="updateLocation($event)"></app-live-edit-input>
-        </dd>
-        <dt class="text-upper">e-mail</dt>
-        <dd>
-            <app-live-edit-input value={{email}} (onSave)="updateEmail($event)"></app-live-edit-input>
-        </dd>
-        <!-- <dt class="text-upper">phone</dt>
-        <dd>
-            <app-live-edit-input value={{phone}} (onSave)="updatePhone($event)"></app-live-edit-input>
-        </dd> -->
+        <div *ngIf="!isShareMode || fullName">
+            <dt class="text-upper">Full Name</dt>
+            <dd>
+                <app-live-edit-input placeholder="Your full-name..." value={{fullName}} (onSave)="updateFullName($event)"></app-live-edit-input>
+            </dd>
+        </div>
+        <div *ngIf="!isShareMode || location">
+            <dt class="text-upper">Location</dt>
+            <dd>
+                <app-live-edit-input placeholder="Your location..." value={{location}} (onSave)="updateLocation($event)">
+                </app-live-edit-input>
+            </dd>
+        </div>
+
+        <div *ngIf="!isShareMode || email">
+            <dt class="text-upper">e-mail</dt>
+            <dd>
+                <app-live-edit-input placeholder="Your e-mail..." value={{email}} (onSave)="updateEmail($event)">
+                </app-live-edit-input>
+            </dd>
+        </div>
+
+        <div *ngIf="!isShareMode || phone">
+            <dt class="text-upper">phone</dt>
+            <dd>
+                <app-live-edit-input placeholder="Your phone..." value={{phone}} (onSave)="updatePhone($event)">
+                </app-live-edit-input>
+            </dd>
+        </div>
     </dl>
 </div>
