--- a/src/app/modules/live-edit-input/live-edit-input.component.html
+++ b/src/app/modules/live-edit-input/live-edit-input.component.html
@@ -2,8 +2,12 @@
 
     <p *ngIf="!isEnabled(); else elseBlock" [innerHTML]="value"></p>
     <ng-template #elseBlock>
-        <p *ngIf="!isEdit" [innerHTML]="(value ? value : placeholder ? placeholder : '') | linebreaks" class="hover">
+        <p *ngIf="!isEdit" [innerHTML]="(value ? value : placeholder) | linebreaks" [ngClass]="{
+                'hover': true,
+                'emptyField': value.length === 0
+            }">
         </p>
+
         <div *ngIf="isEdit">
             <input id="author" class="form-item" type="text" *ngIf="isEdit" [ngModel]="newValue" value="{{newValue}}" (ngModelChange)="onNameChange($event)" />
         </div>
