--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -2,7 +2,7 @@
     <h2 class="title-lg text-upper padd-box">Skills</h2>
     <mat-form-field class="example-chip-list" appearance="fill">
         <mat-chip-list #chipList multiple [formControl]="formControl">
-            <mat-chip *ngFor="let skill of skills; let i = index" [selected]="skill" [value]="skill.name" (removed)="removeSkill(skill, i)">
+            <mat-chip *ngFor="let skill of skills; let i = index" [selected]="skill.name" [value]="skill.name" (removed)="removeSkill(skill, i)">
                 {{skill.name}}
             </mat-chip>
             <ng-template [ngIf]="isEnabled()">
@@ -11,5 +11,6 @@
         </mat-chip-list>
     </mat-form-field>
 
-    <input class="btn btn-primary btn-lg" type="submit" value="Post Your Comment" (click)="saveSkills()" *ngIf="isSave()">
+    <input class="btn btn-primary btn-sm" type="submit" value="Save" (click)="saveSkills()" *ngIf="isSave()">
+    <input class="btn btn-primary btn-sm" type="submit" value="Cancel" (click)="cancel()" *ngIf="isSave()">
 </section>
