--- a/src/app/modules/live-edit-input/live-edit-input.component.html
+++ b/src/app/modules/live-edit-input/live-edit-input.component.html
@@ -5,7 +5,7 @@
         <p *ngIf="!isEdit" [innerHTML]="(value ? value : placeholder) | linebreaks" [ngClass]="{
                 'hover': true,
                 'emptyField': value.length === 0
-            }">
+            }" style="margin: 0;">
         </p>
 
         <div *ngIf="isEdit">
