--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -3,63 +3,65 @@
     <div class="education">
         <div class="education-box" *ngFor="let experience of experiences; let i = index">
             <div class="education-date" style="display: flex;">
-                <div class="date-block" contenteditable (input)="updateStartDate($event, i)">{{experience.from}}</div>
+                <div [class.date-block]="isEnabled()" [attr.contenteditable]="isEnabled()" (input)="updateStartDate($event, i) ">
+                    {{experience.from}}</div>
                 <div>
                     &nbsp;-&nbsp;
                 </div>
-                <div class="date-block" contenteditable (input)="updateEndDate($event, i)">{{getToDate(experience.to)}}</div>
+                <div [class.date-block]="isEnabled()" [attr.contenteditable]="isEnabled()" (input)="updateEndDate($event, i) ">
+                    {{getToDate(experience.to)}}</div>
             </div>
-            <div style="display: flex; justify-content: space-between;">
+            <div style="display: flex; justify-content: space-between; ">
                 <h3>
-                    <app-live-edit-input value={{experience.position}} (onSave)="updatePosition($event, i)">
+                    <app-live-edit-input value={{experience.position}} (onSave)="updatePosition($event, i) ">
                     </app-live-edit-input>
                 </h3>
-                <ng-template [ngIf]="isEnabled()">
-                    <strong class="progress-title" hover-class="highlight" (click)="removeExistingExperience(i)">Remove</strong>
+                <ng-template [ngIf]="isEnabled() ">
+                    <strong class="progress-title " hover-class="highlight " (click)="removeExistingExperience(i) ">Remove</strong>
                 </ng-template>
             </div>
-            <span class="education-company">
-                <app-live-edit-input value={{experience.company.name}} (onSave)="updateCompanyName($event, i)">
+            <span class="education-company ">
+                <app-live-edit-input value={{experience.company.name}} (onSave)="updateCompanyName($event, i) ">
                 </app-live-edit-input>
             </span>
             <p>
-                <app-live-edit-textarea value={{experience.description}} (onSave)="updateDescription($event, i)">
+                <app-live-edit-textarea value={{experience.description}} (onSave)="updateDescription($event, i) ">
                 </app-live-edit-textarea>
             </p>
         </div>
-        <p *ngIf="!experiences?.length || 0 && !newExperiences?.length || 0">
+        <p *ngIf="!experiences?.length || 0 && !newExperiences?.length || 0 ">
             No experiences are added
         </p>
     </div>
-    <div class="education">
-        <div class="education-box" *ngFor="let experience of newExperiences; let i = index ">
-            <div class="education-date" style="display: flex;">
-                <div class="date-block" contenteditable (input)="addStartDate($event, i)">{{experience.from}}</div>
+    <div class="education ">
+        <div class="education-box " *ngFor="let experience of newExperiences; let i= index ">
+            <div class="education-date " style="display: flex; ">
+                <div class="date-block " contenteditable (input)="addStartDate($event, i)">{{experience.from}}</div>
                 <div>
                     &nbsp;-&nbsp;
                 </div>
-                <div class="date-block" contenteditable (input)="addEndDate($event, i)">{{experience.to}}</div>
+                <div class="date-block " contenteditable (input)="addEndDate($event, i) ">{{experience.to}}</div>
             </div>
             <h3>
-                <app-live-edit-input placeholder="Position" value={{experience.position}} (onSave)="addPosition($event, i)"></app-live-edit-input>
+                <app-live-edit-input placeholder="Position " value={{experience.position}} (onSave)="addPosition($event, i) "></app-live-edit-input>
             </h3>
-            <span class="education-company">
-                <app-live-edit-input placeholder="Company" value={{experience.company.name}}
-                    (onSave)="addCompanyName($event, i)"></app-live-edit-input>
+            <span class="education-company ">
+                <app-live-edit-input placeholder="Company " value={{experience.company.name}}
+                    (onSave)="addCompanyName($event, i) "></app-live-edit-input>
             </span>
             <p>
-                <app-live-edit-textarea placeholder="Description" value={{experience.description}} (onSave)="addDescription($event, i)"></app-live-edit-textarea>
+                <app-live-edit-textarea placeholder="Description " value={{experience.description}} (onSave)="addDescription($event, i) "></app-live-edit-textarea>
             </p>
         </div>
     </div>
-    <ng-template [ngIf]="isEnabled()">
-        <input class="btn btn-primary btn-sm" type="submit" value="Add Experience" (click)="addNewCompany()" style="display: table;margin-left: auto;margin-right: auto;">
-        <div style="display: inline-flex;">
-            <div *ngIf="newExperiences.length ||  experiencesToUpdate.length || experiencesToDelete.length" (click)="decline()" class="form-submit form-item-wrap" (click)="decline()">
-                <input class="btn btn-primary btn-sm" type="submit" value="Cancel">
+    <ng-template [ngIf]="isEnabled() ">
+        <input class="btn btn-primary btn-sm " type="submit " value="Add Experience " (click)="addNewCompany() " style="display: table;margin-left: auto;margin-right: auto; ">
+        <div style="display: inline-flex; ">
+            <div *ngIf="newExperiences.length || experiencesToUpdate.length || experiencesToDelete.length " (click)="decline() " class="form-submit form-item-wrap " (click)="decline() ">
+                <input class="btn btn-primary btn-sm " type="submit " value="Cancel ">
             </div>
-            <div class="form-submit form-item-wrap">
-                <input class="btn btn-primary btn-sm" type="submit" value="Save" *ngIf="isSave()" (click)="saveNewCompanies()">
+            <div class="form-submit form-item-wrap ">
+                <input class="btn btn-primary btn-sm " type="submit " value="Save " *ngIf="isSave() " (click)="saveNewCompanies() ">
             </div>
         </div>
     </ng-template>
