--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-12">
             <h2 class="title-lg text-upper">About Me</h2>
-            <app-live-edit-textarea value={{summary}} (onSave)="updateSummary($event)"></app-live-edit-textarea>
+            <app-live-edit-textarea value={{summary}} placeholder="Describe your story" (onSave)="updateSummary($event)"></app-live-edit-textarea>
         </div>
     </div>
     <div class="row" *ngIf="isEnabled()">
