--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -6,7 +6,7 @@
             <div class="crt-paper clearfix">
                 <div class="crt-paper-cont paper-padd clear-mrg">
                     <div class="padd-box">
-                        <h2 class="title-lg text-upper">Log In</h2>
+                        <h2 class="title-lg text-upper">Sing Up</h2>
 
                         <div class="padd-box-sm">
                             <form action="#" method="post" class="contact-form">
@@ -22,9 +22,9 @@
                                         <input [(ngModel)]="password" [value]="password" name="password" class="form-item" type="url" />
                                     </div>
                                 </div>
-                                <a href="/singup">Create an account</a>
+                                <a href="/singin">Sing In</a>
                                 <div class="form-submit form-item-wrap">
-                                    <input class="btn btn-primary btn-lg" type="submit" value="Log In" (click)="logIn()" />
+                                    <input class="btn btn-primary btn-lg" type="submit" value="Sing Up" (click)="register()" />
                                 </div>
                             </form>
                         </div>
